@@ -3,6 +3,9 @@ NEWS - OpenPrinting CUPS Filters v1.19.0 - 2018-01-15
 
 CHANGES IN V1.20.0
 
+	- libcupsfilters: Fixed loading option/choice strings lists
+	  from driverless printers for PPD file generation. Especially
+	  proprietary media types appear correctly now.
 	- libcupsfilters: Completed color space support in the PPD
 	  generator: Added DeviceGray/RGB/CMYK, default to 8 bit for
 	  SRGB and to 16 bit for AdobeRGB, avoid duplicate listings of
